--- a/.gitignore
+++ b/.gitignore
@@ -12,21 +12,27 @@
 *.pch
 
 # Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+#*.so
+#*.dylib
+#*.dll
 
 # Fortran module files
 *.mod
 *.smod
 
 # Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+#*.lai
+#*.la
+#*.a
+#*.lib
 
 # Executables
 *.exe
 *.out
 *.app
+
+# exclude everything
+build/*
+
+# exception to the rule to keep folder
+!build/.gitkeep 
